Inventory item completed and Issue item is in progress